flycheck-stan/examples/example_error_not_conditional.stanc3out.txt

Semantic error in 'examples/example_error_not_conditional.stan', line 19, column 12 to column 35:
   -------------------------------------------------
    17:  model {
    18:    mu ~ normal(0, 10);
    19:    target += cauchy_lpdf(tau, 0, 10);
                     ^
    20:    eta ~ normal(0, 1); // implies theta ~ normal(mu, tau)
    21:    y ~ normal(theta, sigma);
   -------------------------------------------------

Probabilty functions with suffixes _lpdf, _lpmf, _lcdf, and _lccdf, require a vertical bar (|) between the first two arguments.

